fix(posts): add line breaks in paragraph for description field

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -34,3 +34,7 @@
     flex-wrap: nowrap;
     overflow: hidden;
 }
+
+.with-line-breaks {
+    white-space: pre;
+}
